/* Encoding: UTF-8 (No BOM)  Notation (in 5th position):
     * Change, ! Fix, % Optimization, + Addition, - Removal, ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2025-11-08 23:27 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + build/nappgui/*
    + added C lib by Francisco Garcia Collado
      NAppGUI Cross-Platform C SDK: Build portable desktop
      applications for Windows, macOS and Linux, using just C.

    ; it builds DEBUG version right now

2025-11-08 21:22 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + base/pmgr/hbpk-sizecat.ape
  + base/pmgr/hbpk-sizecat.ape.aarch64.elf.xz
    + added hbpk-sizecat tool compiled by "cosmocc" resulting in
      Actually Portable Executable using cosmopolitan libc.
      Can help in bootstraping on systems lacking gcc installed.

  + base/xz-ape/xz.com
    + added xz APE binary for bootstrapping on systems lacking
      both compiler and xz, should this package be called xz-binary?

2025-11-07 01:17 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + build/libcotp/*
    + added C library that generates TOTP and HOTP according to RFC-6238
      this package depends on OpenSSL (there are other options)

  + build/hbotp-naldodj/*
    + added libcotp wrapper by Naldo DJ
      NOTE: this contrib lacks a *.hbc file

  + build/libssh2/Makefile
    * updated for MSYS2 compat

2025-11-07 00:15 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * build/zig-binary/ar.bat
  * build/zig-binary/ranlib
  * build/zig-binary/ranlib.bat
    * added ranlib, added .bat wrappers for things that could
      be called from cmake_link_scripts

  * build/zig-binary/zig
    * chmod

2025-11-07 00:04 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * base/pmgr/hbpk-del.in
    ! fix for path with spaces

  * common.mk
    * CMake using cmake_link_script does not call back to MSYS2
      shell properly, therefore we have to also make a .bat
      wrapper for Zig
