@@ -19,7 +19,7 @@ jobs:
 
     - name: Prepare environment
       run: |
-        sudo apt install libcurl4-openssl-dev libssl-dev
+        sudo apt install libcurl4-openssl-dev libssl-dev libgtk-3-dev
         sudo mkdir /opt/hbpk
         sudo chown $USER:$USER /opt/hbpk
         echo verbose=off > $HOME/.wgetrc
@@ -84,6 +84,7 @@ jobs:
           letodbf-rdd-elch \
           letodbf-rdd-alcz \
           harbour-yaml \
+          nappgui \
           libpq9 \
           harbour-pgsql \
           " \
